# pytest-html-report-merger

./: .flake8  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/pytest_html_report_merger/: __main__.py
